<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin">


    <ImageButton
        android:id="@+id/back_navigation_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/image_btn_background"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon"
        android:contentDescription="@string/back_navigation_description" />


    <TextView
        android:id="@+id/welcomeTextView"
        style="@style/HeadLine.H4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintWidth_max="200dp"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/create_account_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_navigation_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputLayout"
        style="@style/TextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_input_text"
            android:maxLines="1"
            android:paddingStart="0dp"
            android:textAppearance="@style/SubTitle.Regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/TextInputLayoutTheme.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_text_view"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:textAppearance="@style/SubTitle.Regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmInputLayout"
        style="@style/TextInputLayoutTheme.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm_input_text_view"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:textAppearance="@style/SubTitle.Regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:textAppearance="@style/HeadLine.H6"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/create_account_btn_text"
        android:background="@drawable/logo_background"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputLayout" />

    <LinearLayout
        android:id="@+id/notice_description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_account">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SubTitle.Regular"
            android:text="@string/already_have_account_text" />

        <TextView
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textAppearance="@style/SubTitle.Medium"
            android:textColor="@color/app_main_color" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>