<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin">

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/logo_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/logo_pen" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcomeTextView"
        style="@style/HeadLine.H4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:maxWidth="200dp"
        android:maxLines="2"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/welcome_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputLayout"
        style="@style/TextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_input_text"
            android:maxLines="1"
            android:paddingStart="0dp"
            android:textAppearance="@style/SubTitle.Regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/TextInputLayoutTheme.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_text_view"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:textAppearance="@style/SubTitle.Regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:textAppearance="@style/HeadLine.H6"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_btn_text"
        android:background="@drawable/logo_background"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <LinearLayout
        android:id="@+id/notice_description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SubTitle.Regular"
            android:text="@string/no_have_account_text" />

        <TextView
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/sign_up"
            android:textAppearance="@style/SubTitle.Medium"
            android:textColor="@color/app_main_color" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>